# emirt

./: .gitignore  .travis.yml  README.md  __init__.py  aws.py  boss_cutout_upload.py  cloudvolume_to_VAST_dir.py  cloudvolume_to_tif_dir.py  concat_h5.py  crop_tif_dir.py  domains.py  emio.py  h5_to_tif_dir.py  io.py  label2omni.py  omnify.py  omnify_VAST_dir.py  rand_curve.py  rand_error.py  relabel_omni.py  requirements.txt  segmentation.py  setup.cfg  setup.py  setup_VAST_dir.py  show.py  stitch_AIBS.py  stitch_ground_truth.py  tif_dir_to_h5.py  volume_util.py
label2omni/: omni.cmd  omnifycation.sh
src/: main.cpp  seg.hpp
test/: test_io.py
tifffile/: __init__.py~
