[metadata]
name = emirt 
url = https://github.com/seung-lab/emirt/
summary = EM image reconstruction toolbox 
description-file =
    README.md 
author = Jingpeng Wu 
author-email = jingpeng@princeton.edu 
home-page = https://github.com/seung-lab/emirt/
license=BSD
classifier =
    Intended Audience :: Developers 
    Development Status :: 3 - Alpha 
    License :: OSI Approved :: BSD License
    Programming Language :: Python 
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 3.5
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = emirt

[wheel]
universal = 0
